--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -3,7 +3,7 @@
 <div id='discourse-comments'></div>
 <script type="text/javascript">
   DiscourseEmbed = { discourseUrl: 'https://foorumi.laji.fi/',
-                     discourseEmbedUrl: 'https://luomus.github.io/finbif-blog/{{ .URL }}' };
+                     discourseEmbedUrl: 'https://luomus.github.io{{ .URL }}' };
 
   (function() {
     var d = document.createElement('script'); d.type = 'text/javascript'; d.async = true;
