Control width of comments container

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,6 +1,6 @@
 {{if eq .Section "post"}}
 
-<div id='discourse-comments'></div>
+<div id='discourse-comments' class='container'></div>
 <script type="text/javascript">
   DiscourseEmbed = { discourseUrl: 'https://foorumi.laji.fi/',
                      discourseEmbedUrl: 'https://luomus.github.io{{ .URL }}' };
