Remove comments for posts page

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,4 +1,4 @@
-{{if eq .Section "post"}}
+{{ if and (eq .Section "post") (ne .Params.title "Posts") }}
 
 <div id='discourse-comments' class='container'></div>
 <script type="text/javascript">
